<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="welcome_to_dashboard">Welcome to Dashboard</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="track_your_expenses_manage_your_budget">Track your expenses, manage your budget</string>
    <string name="track_your_expenses_stay_in_control">Track your expenses, stay in control</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="add_expense">Add Expense</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hint_description">Description</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_category">Category</string>
    <string name="button_save_expense">Save Expense</string>
    <string name="profile_info_title">User Profile</string>
    <string name="hint_update_email">Update Email</string>
    <string name="hint_update_password">Update Password</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="button_delete_account">Delete Account</string>
</resources>